fix: address PR comments, update the vertical gap after the Vault section header

--- a/src/containers/Vault/VaultHeader/styles.scss
+++ b/src/containers/Vault/VaultHeader/styles.scss
@@ -35,6 +35,10 @@
   .details-column {
     min-width: 0;
     flex: 1;
+
+    .token-table {
+      margin-top: 0;
+    }
   }
 }
 
